bug: fixing a bug where the color wasn't visible when hovering over the settings button

--- a/src/config/waybar/style.css
+++ b/src/config/waybar/style.css
@@ -218,7 +218,7 @@ tooltip label {
 #custom-settings:hover,
 #custom-power:hover {
   color: @th-foreground2;
-  border-bottom: 1px solid @th-decorate;
+  border-bottom: 1px solid @th-foreground2;
 }
 
 #custom-settings {
